--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <h1>ShopSense</h1>
       <h3>~ Where Choices Make Sense!!</h3>
       <button id="cartBtn">🛒 Cart</button>
+      <button id="darkModeToggle">🌙 Dark Mode</button>
+
     </header>
 
     <!-- MAIN CONTENT -->
