--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
     <!-- FOOTER -->
     <footer>
       <p>&copy; 2025 ShopSense. All rights reserved.</p>
+      <footer>
+
+  <p>Follow us on <a href="#">Instagram</a> | <a href="#">Twitter</a></p>
+</footer>
+
       <!-- HERE (&copy;) DENOTES THE COPYRIGHT SYMBOL IN MY PAGE -->
       <a
         href="mailto: helpshopsense@gmail.com"
